feature: refactor user
